# kingstonpier

./: .gitignore  COPYRIGHT  HANDOFF.md  README.md  dev.sh  todo.txt
.github/workflows/: deploy.yml
api/: .env.example  README.md  requirements.txt  seed.py
api/app/: aggregate.py  config.py  db.py  main.py  models.py  weather.py
db/: README.md  schema.sql
deploy/: CHECKLIST.md  README.md  backup_db.sh  install.sh
systemd/: kingstonpier-api.service  kingstonpier-backup.service  kingstonpier-backup.timer  kingstonpier-cv-worker.service
tracker/: .gitignore  README.md  beach  collect_frames.py  counter_model.py  crowd_tracker.py  db.py  deploy_model.sh  detector.py  feeds.py  label  label_points.py  preseed_points.py  pyproject.toml  requirements-pi.txt  train_counter.py
web/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.toml
web/src/components/: Footer.astro  Header.astro  HeroCard.astro  MethodCard.astro  PopularTimes.astro  TrendChart.astro  WeatherCard.astro
web/src/layouts/: Layout.astro
web/src/lib/: api.ts  bars.ts  busyness.ts  format.ts  live.ts  mock.ts  spark.ts
web/src/pages/: index.astro
web/src/styles/: global.css
